--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
     "react": "^19.0.0",
