--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.24.3",
     "axios": "^1.8.3",
+    "date-fns": "^4.1.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "styled-components": "^6.1.15"
   },
